--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^14.0.11",
     "mwts": "^1.0.5",
     "@midwayjs/cli": "^1.0.0",
+    "@midwayjs/glob": "^1.0.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0",
     "sqlite3": "5.0.0"
